# dysts

./: .gitattributes  .gitignore  .gitmodules  .mypy.ini  CONTRIBUTING.md  LICENSE.md  OLDchaotic_attractors.json  OLDchaotic_attractors2.json  README.md  benchmarks.ipynb  blinking_vortex.ipynb  chaos_ensemble.ipynb  chaos_ensemble.py  chaotic_attractors.json  chaotic_attractors2.json  database_dynamical_properties.ipynb  demos.ipynb  demos_maps.ipynb  descriptive_statistics.ipynb  find_attractor_properties.py  forecast_Lorenz_chronos-base-context100.npz.npy  generate_time_series.ipynb  lyapunov_code.ipynb  pyproject.toml  req.txt  setup.py  test.json  utils.py
.ipynb_checkpoints/: utils-checkpoint.py
archive/: OLD2chaotic_attractors.json  ORIGchaotic_attractors.json  Untitled.ipynb  animated_vortex.ipynb  blinking_vortex.ipynb
benchmarks/: BENCHMARKS.md  OLDprivate_movies.ipynb  README_benchmarks.md  baseline_transfer_learning.py  benchmarks_multivariate.py  calculate_all_lyapunov_exponents.py  check_for_gpu.py  classical_benchmarks.py  compute_benchmarks.py  compute_benchmarks_multivariate.py  compute_benchmarks_noise_coarse.py  compute_benchmarks_noise_fine.py  esn_benchmarks.py  figure_descriptive_statistics.ipynb  figure_forecasting_benchmarks_figures.ipynb  figure_importance_sampling.ipynb  figure_symbolic_regression_benchmark.ipynb  figure_transfer_learning.ipynb  find_attractor_properties.py  find_hyperparameters.py  find_hyperparameters2.py  find_hyperparameters_classical.py  find_hyperparameters_multivariate.py  find_hyperparameters_multivariate_classical.py  forecasting_benchmarks.ipynb  forecasting_benchmarks_figures.ipynb  generate_time_series.ipynb  generative_training.ipynb  hall_of_fame_2021-07-12_200320.710.csv.bkup  hall_of_fame_2021-07-12_200925.978.csv  hasten_training.ipynb  importance_sampling.ipynb  importance_sampling.py  log.txt  lyap.py  lyapunov_exponents.txt  lyapunov_exponents_manyshort.txt  lyapunov_exponents_median.txt  lyapunov_exponents_naive_mean.txt  lyapunov_exponents_qr.txt  (+22 more)
docs/: Makefile  conf.py  index.html  index.rst
dysts/: __init__.py  analysis.py  base.py  datasets.py  equation_utils.py  flows.py  lyap.py  maps.py  metrics.py  sampling.py  systems.py  trajectory.py  utils.py
models/: LiESN.py  __init__.py  utils.py
(+143 files in other folders)
