[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dysts"
version = "0.92"
description = "More than 100 strange attractors"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy", "tqdm"]

# Optional dependencies
[project.optional-dependencies]
benchmarks = ["darts", "torch", "scikit-learn", "pandas", "tsfresh", "nolds"]
numba = ["numba"]
extra = ["sdeint", "sklearn"]

# Package data
[tool.setuptools]
packages = ["dysts"]

[tool.setuptools.package-data]
"dysts" = ["data/*"]
