[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dysts"
version = "0.93"
description = "More than 100 strange attractors"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy", "tqdm"]

# Optional dependencies
[project.optional-dependencies]
benchmarks = ["darts", "torch", "scikit-learn", "pandas", "tsfresh", "nolds"]
numba = ["numba"]
tests = ["matplotlib"]
extra = ["sdeint", "scikit-learn"]

# Package data
[tool.setuptools]
packages = ["dysts"]

[tool.setuptools.package-data]
"dysts" = ["data/*"]
