[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dysts"
version = "0.95"
description = "More than 100 strange attractors"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "matplotlib", "scipy", "scikit-learn", "tqdm"]

# Optional dependencies
[project.optional-dependencies]
benchmarks = ["darts", "torch", "pandas"]
numba = ["numba"]
extra = ["sdeint"]

# Package data
[tool.setuptools]
packages = ["dysts", "dysts.utils"]

[tool.setuptools.package-data]
"dysts" = ["data/*"]
